@@ -1,7 +1,7 @@
 // padthv1_controls.cpp
 //
 /****************************************************************************
-   Copyright (C) 2012-2019, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2020, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -22,8 +22,6 @@
 #include "padthv1_controls.h"
 
 #include <QHash>
-
-#include <math.h>
 
 
 #define RPN_MSB   0x65
